applications/databases/home1/mariadb/pma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
